--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -18,6 +18,13 @@
         />
         <button type="submit">Search</button>
       </form>
+      <div class="results">
+        <div class="longi-lati">
+          <p class="longitude"></p>
+          <p class="latitude"></p>
+        </div>
+        <p class="forecast"></p>
+      </div>
       <div class="pages">
         <ul>
           <li><a href="./about.html">About</a></li>
